fixed `!important` not working when there is too much, or no whitespace. Closes #55

--- a/spec/less/css.less
+++ b/spec/less/css.less
@@ -91,9 +91,14 @@ h2[title] {
   display: -moz-inline-stack;
   width: .1em;
   background-color: #009998;
-  color: red !important;
   background-image: url(images/image.jpg);
   background: -webkit-gradient(linear, left top, left bottom, from(red), to(blue));
   margin: ;
+}
+
+#important {
+  color: red !important;
+  width: 100%!important;
+  height: 20px ! important;
 }
 
